--- a/_GitBook/Intro_R_Workshop.tex
+++ b/_GitBook/Intro_R_Workshop.tex
@@ -202,7 +202,7 @@ Please use the table of contents (TOC) on the left to navigate the course conten
 \hypertarget{venue-date-and-time}{%
 \section{Venue, date and time}\label{venue-date-and-time}}
 
-This workshop will take place in the week of \textbf{28 January -- 31 January 2020}, from \textbf{9:00--16:00} each day. We will meet in the BCB computer lab on the 5th floor.
+This workshop will take place in the week of \textbf{15 -- 19 March 2021}, from \textbf{9:00--16:00} each day. We will meet in the BCB computer lab on the 5th floor.
 
 \hypertarget{course-outline}{%
 \section{Course outline}\label{course-outline}}
@@ -509,8 +509,8 @@ Early on, develop the habit of unambiguous and consistent style and formatting w
 \end{Shaded}
 
 \begin{verbatim}
-R>  [1]   9.075026  -6.428102 -19.299051 -12.670656   1.856233   1.135511
-R>  [7]  33.732443   6.530887   2.929501   9.696734
+R>  [1] -19.6823370  -0.9701716   5.5970729   5.6486560  17.0909447  14.6364163
+R>  [7]  -2.4846517  20.7576669  19.2297749   6.8592490
 \end{verbatim}
 
 Consult these resources for more about R code style :
@@ -553,15 +553,7 @@ After an hour has passed we will take a break. When we return we will see how to
 \hypertarget{session-info}{%
 \section{Session info}\label{session-info}}
 
-\begin{Shaded}
-\begin{Highlighting}[]
-\FunctionTok{installed.packages}\NormalTok{()[}\FunctionTok{names}\NormalTok{(}\FunctionTok{sessionInfo}\NormalTok{()}\SpecialCharTok{$}\NormalTok{otherPkgs), }\StringTok{"Version"}\NormalTok{]}
-\end{Highlighting}
-\end{Shaded}
-
-\begin{verbatim}
-R> character(0)
-\end{verbatim}
+`\texttt{\{r,\ echo=TRUE,\ include=TRUE\}\ installed.packages(){[}names(sessionInfo()\$otherPkgs),\ "Version"{]}}
 
 \hypertarget{rstudio}{%
 \chapter{RStudio}\label{rstudio}}
