--- a/docs/Intro_R_Workshop.tex
+++ b/docs/Intro_R_Workshop.tex
@@ -111,7 +111,7 @@
 
 \usepackage[a4paper,text={16.5cm,25.2cm},centering,margin=2.6cm]{geometry}
 % \usepackage[left=1.0in,top=1.0in,right=1.0in,bottom=1.0in]{geometry}
-\usepackage{hyperref,amsmath,amssymb,bm,url,enumitem,dcolumn,upquote,framed,alltt,textgreek,xfrac,fixltx2e}
+\usepackage{hyperref,amsmath,amssymb,bm,url,enumitem,dcolumn,upquote,framed,alltt,textgreek,xfrac}
 \usepackage[australian]{babel}
 \usepackage[compact,small]{titlesec}
 \usepackage{xcolor}
@@ -122,13 +122,13 @@
  \defaultfontfeatures{Ligatures=TeX} % To support LaTeX quoting style
  \defaultfontfeatures{Ligatures=TeX}
  \setmainfont{Calibri}
- \setsansfont[Scale=MatchLowercase]{Calibri}
+ \setsansfont[Scale=MatchLowercase]{SF Pro}
  \setmonofont[Scale=0.75,Color=blue]{Fira Code}
 \else
   \usepackage[T1]{fontenc}
   \usepackage[utf8]{inputenc}
   \usepackage{lmodern}
-  \usepackage[full]{textcomp} % directly use the degree (and some other) symbol
+  % \usepackage[full]{textcomp} % directly use the degree (and some other) symbol
 \fi
 
 % place after fonts; even better typesetting for improved readability:
@@ -197,7 +197,7 @@ Please use the table of contents (TOC) on the left to navigate the course conten
 \hypertarget{venue-date-and-time}{%
 \section{Venue, date and time}\label{venue-date-and-time}}
 
-This workshop will take place in the week of \textbf{28 January -- 31 January 2020}, from \textbf{9:00--16:00} each day. We will meet in the BCB computer lab on the 5th floor.
+This workshop will take place in the week of \textbf{15 -- 19 March 2021}, from \textbf{9:00--16:00} each day. We will meet in the BCB computer lab on the 5th floor.
 
 \hypertarget{course-outline}{%
 \section{Course outline}\label{course-outline}}
